--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@github/custom-element-element",
+  "name": "number-format-element",
   "version": "0.0.1",
   "description": "Boilerplate for creating a custom element.",
-  "main": "dist/custom-element.js",
-  "module": "dist/custom-element.js",
+  "main": "dist/number-format-element.js",
+  "module": "dist/number-format-element.js",
   "type": "module",
-  "types": "dist/custom-elements.d.ts",
+  "types": "dist/number-format-elements.d.ts",
   "license": "MIT",
-  "repository": "github/custom-element-boilerplate",
+  "repository": "24webcomponents/number-format",
   "files": [
     "dist"
   ],
